# tsevasa-infinite-chess-engine

./: Cargo.toml  README.md
.github/workflows/: sprt-ci.yml
sprt/: README.md  package.json  run_sprt_ci.js  run_texel_from_games.js  sprt.js  spsa.mjs  spsa_config.mjs  texel_tuner.js
sprt/web/: index.html  main.js  sprt-worker.js  spsa-worker.js  spsa.html  variants.js
src/: evaluation.rs  game.rs  lib.rs  moves.rs  search.rs
src/evaluation/: base.rs  mod.rs
src/evaluation/variants/: confined_classical.rs  mod.rs
src/search/: ordering.rs  params.rs
tests/: perft.rs  search_test.rs
