[package]
name = "hydrochess-wasm"
version = "0.1.0"
authors = ["FirePlank <44502537+FirePlank@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/FirePlank/infinite-chess-engine"
description = "A chess engine made for the infinitechess.org website that can play on an infinite plain."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }
once_cell = "1.19"
serde_json = { version = "1.0", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
serde_json = "1.0"

[features]
default = []
eval_tuning = ["serde_json"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Optimize for speed and small code size
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
inherits = "release"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = [
  "-O4",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-O4",
]